@@ -3,6 +3,8 @@
 
                 Version 0.6-trunk
 
+# (r1540)
+ * if SSH_TTY set and no output device specified, will give precedence to aalib.
 # (r1539)
  * bugfix: in --as-text will avoid repeated reload of file.
 # (r1526)
